scripts/example/payment/deploy-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payment-a
  name: payment-a
spec:
  selector:
    matchLabels:
      app: payment-a
  template:
    metadata:
      labels:
        app: payment-a
    spec:
      containers:
        - image: nginx
          imagePullPolicy: Always
          name: nginx
