scripts/example/payment/egress-invalid-from-payment-a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-from-payment-a
spec:
  podSelector:
    matchLabels:
      app: payment-x
  policyTypes:
    - Egress
  egress:
    - { }
